--- a/teams/templates/teams/team_detail.html
+++ b/teams/templates/teams/team_detail.html
@@ -97,7 +97,7 @@
 </div>
 
 <!-- Table container -->
-<div class="sm:mx-0.5 lg:mx-0.">
+<div class="sm:mx-0.5">
   <div class="max-w-[97vw] py-2 inline-block min-w-full min-w-full sm:px-6 lg:px-8">
 
     <div class="table_tabs flex justify-evenly gap-1 relative z-10 w-[250px] rounded-t-md text-xs dark:text-[#A1A1AA] cursor-pointer pl-2 pr-3 py-1 shadow  bg-white dark:bg-zinc-900">
