--- a/teams/templates/teams/team_list.html
+++ b/teams/templates/teams/team_list.html
@@ -18,9 +18,13 @@
 </div>
 
 <!-- Table container -->
-<div class="overflow-x-auto sm:mx-0.5 lg:mx-0.5">
-  <div class="py-2 inline-block min-w-full sm:px-6 lg:px-8">
-    <div class="rounded-xl bg-white forced-colors:outline px-3 overflow-hidden
+<div class="sm:mx-0.5">
+  <div class="max-w-[97vw] py-2 inline-block min-w-full min-w-full sm:px-6 lg:px-8">
+    <div class="
+    overflow-hidden relative z-10 rounded-md
+    rounded-xl 
+    bg-white 
+    forced-colors:outline px-3
     dark:before:rounded-xl 
     dark:shadow-[0px_0px_0px_1px_rgba(255,255,255,0.1)]
     dark:before:shadow-[0px_2px_8px_0px_rgba(0,_0,_0,_0.20),_0px_1px_0px_0px_rgba(255,_255,_255,_0.06)_inset]
@@ -29,30 +33,32 @@
     dark:before:absolute
     dark:bg-zinc-900
     "> 
-      <table class="min-w-full rounded-md">
-        <thead class="border-bottom-white border-solid border-b-[#a1a1aa30] border-b-solid border-b-[1px]">
+
+    <div class="overflow-auto pr-3"> 
+      <table class="min-w-[800px] md:min-w-full">
+        <thead class="border-bottom-white border-solid border-b-[#a1a1aa30] border-b-solid border-b-[1px] text-gray-900 dark:text-[#A1A1AA]">
           <tr class="">
             <!-- Table headers -->
-            <th scope="col" class="px-6 py-4 text-sm font-medium text-gray-900 dark:text-white text-left">#</th>
-            <th scope="col" class="px-6 py-4 text-sm font-medium text-gray-900 dark:text-white text-left">
+            <th scope="col" class="text-xs md:text-sm lg:text-md px-2 py-4 text-left sticky dark:bg-zinc-900 left-0 z-10 pl-3">#</th>
+            <th scope="col" class="text-xs md:text-sm lg:text-md px-2 py-4 text-left sticky dark:bg-zinc-900 left-[60px] z-10">
               <!-- Column header for team name -->
               <a href="{% url 'team_list' %}?field=name{% if request.GET.order == 'asc' %}&order=desc{% else %}&order=asc{% endif %}">
                 Equipe <i class="fa fa-caret-down" aria-hidden="true"></i>
               </a>
             </th>
-            <th scope="col" class="px-6 py-4 text-sm font-medium text-gray-900 dark:text-white text-left">
+            <th scope="col" class="text-xs md:text-sm lg:text-md px-2 py-4 text-left">
               <!-- Column header for average market value -->
               <a href="{% url 'team_list' %}?field=average_market_value{% if request.GET.order == 'asc' %}&order=desc{% else %}&order=asc{% endif %}">
                 Valor médio de mercado <i class="fa fa-caret-down" aria-hidden="true"></i>
               </a>
             </th>
-            <th scope="col" class="px-6 py-4 text-sm font-medium text-gray-900 dark:text-white text-right">
+            <th scope="col" class="text-xs md:text-sm lg:text-md px-2 py-4 text-left">
               <!-- Column header for total market value -->
               <a href="{% url 'team_list' %}?field=total_market_value{% if request.GET.order == 'asc' %}&order=desc{% else %}&order=asc{% endif %}">
                 Valor de mercado total <i class="fa fa-caret-down" aria-hidden="true"></i>
               </a>
             </th>
-            <th scope="col" class="px-6 py-4 text-sm font-medium text-gray-900 dark:text-white text-right">
+            <th scope="col" class="text-xs md:text-sm lg:text-md px-2 py-4 text-right">
               <!-- Column header for number of leagues -->
               <a href="{% url 'team_list' %}?field=num_leagues{% if request.GET.order == 'asc' %}&order=desc{% else %}&order=asc{% endif %}">
                 Competições que joga <i class="fa fa-caret-down" aria-hidden="true"></i>
@@ -60,27 +66,27 @@
             </th>
           </tr>
         </thead>
-        <tbody>
+        <tbody class="text-gray-900 dark:text-[#A1A1AA]">
           <!-- Teams list -->
           {% for team in page_obj %}
           <tr class="border-b-[#a1a1aa30] border-b-solid border-b-[1px]">
             <!-- Team data -->
-            <td class="px-2 py-4 whitespace-nowrap text-sm font-medium text-gray-900 dark:text-[#A1A1AA]">
+            <td class="px-2 py-4 whitespace-nowrap text-xs md:text-sm lg:text-md flex flex-col justify-left align-center sticky dark:bg-zinc-900 left-0 z-10 pl-3">
               <img width="40" src="{{ team.small_img }}" class="min-w-[40px]" />
             </td>
-            <td class="px-6 py-4 text-sm text-gray-900 dark:text-[#A1A1AA] font-light whitespace-nowrap">
+            <td class="text-xs md:text-sm lg:text-md font-light px-2 py-4 whitespace-nowrap sticky dark:bg-zinc-900 left-[60px] z-10">
               <!-- Team name -->
               <a href="{% url 'team_detail' pk=team.pk %}" class="flex items-center justify-start gap-1 hover:underline">{{ team.name }}</a>
             </td>
-            <td class="px-6 py-4 text-sm text-gray-900 dark:text-[#A1A1AA] font-light whitespace-nowrap">
+            <td class="text-xs md:text-sm lg:text-md font-light px-2 py-4 whitespace-nowrap">
               <!-- Average market value -->
               <span>{{ team.average_market_value|passToFloat }}</span>
             </td>
-            <td class="px-6 py-4 text-sm text-gray-900 dark:text-[#A1A1AA] font-light whitespace-nowrap text-right">
+            <td class="text-xs md:text-sm lg:text-md font-light px-2 py-4 whitespace-nowrap text-left">
               <!-- Total market value -->
               <span>{{ team.total_market_value|passToFloat }}</span>
             </td>
-            <td class="px-6 py-4 text-sm text-gray-900 dark:text-[#A1A1AA] font-light whitespace-nowrap text-right">
+            <td class="text-xs md:text-sm lg:text-md font-light px-2 py-4 whitespace-nowrap text-right">
               <!-- Number of leagues -->
               <span>{{ team.num_leagues }}</span>
             </td>
@@ -88,6 +94,7 @@
           {% endfor %}
         </tbody>
       </table>
+    </div>
     </div>
   </div>
 </div>
