--- a/templates/atomic/organisms/datalist.html
+++ b/templates/atomic/organisms/datalist.html
@@ -1,6 +1,6 @@
 {% load custom_filters %}
 
-<div class="leagues_data_list flex h-hull items-center justify-center relative">
+<div class="leagues_datalist flex h-hull items-center justify-center relative">
  
   <div class="search_field relative">
 
@@ -26,24 +26,24 @@
   </div>
   {% include 'atomic/organisms/datalist_skeleton.html' %}
   <div
-    class="absolute translate-y-[100%] w-[280px] left-0 bottom-0 search_recomendation max-h-[400px] overflow-auto bg-white rounded-md border-solid border-[1px] border-[#06AA48]"
+    class="absolute translate-y-[100%] w-[280px] left-0 bottom-0 search_recomendation max-h-[400px] overflow-auto bg-white rounded-md border-solid border-[1px] border-[#111111]"
   >
 
     
 
-    <ul class="leagues_data_list_ul data_list_ul">
+    <ul class="leagues_datalist_ul datalist_ul">
 
     </ul>
 
-    <ul class="teams_data_list_ul data_list_ul">
+    <ul class="teams_datalist_ul datalist_ul">
 
     </ul>
 
-    <ul class="players_data_list_ul data_list_ul">
+    <ul class="players_datalist_ul datalist_ul">
 
     </ul>
 
-    <ul class="countries_data_list_ul data_list_ul">
+    <ul class="countries_datalist_ul datalist_ul">
 
     </ul>
   </div>
