--- a/templates/atomic/organisms/datalist_mobile.html
+++ b/templates/atomic/organisms/datalist_mobile.html
@@ -12,7 +12,7 @@
     />
   </svg>
 </div>
-<div class="absolute transform translate-y-[150%] right-full  flex items-center justify-center w-full bg-white data_list">
+<div class="absolute transform translate-y-[150%] right-full  flex items-center justify-center w-full bg-white datalist_desktop datalist">
  
   <div class="search_field relative w-full">
     <input
@@ -23,18 +23,18 @@
     />
   </div>
   {% include 'atomic/organisms/datalist_skeleton.html' %}
-  <div class="absolute  translate-y-[100%] w-full max-h-[calc(100vh - 75px)] lg:w-[280px] left-0 bottom-0 search_recomendation lg:max-h-[400px] overflow-auto bg-white lg:rounded-md border-solid border-[1px] border-[#06AA48]">
+  <div class="absolute  translate-y-[100%] w-full max-h-[calc(100vh - 75px)] lg:w-[280px] left-0 bottom-0 search_recomendation lg:max-h-[400px] overflow-auto bg-white lg:rounded-md border-solid border-[1px] border-[#111111]">
 
-    <ul class="leagues_data_list_ul data_list_ul">
+    <ul class="leagues_datalist_ul datalist_ul">
     </ul>
 
-    <ul class="teams_data_list_ul data_list_ul">
+    <ul class="teams_datalist_ul datalist_ul">
     </ul>
 
-    <ul class="players_data_list_ul data_list_ul">
+    <ul class="players_datalist_ul datalist_ul">
     </ul>
 
-    <ul class="countries_data_list_ul data_list_ul">
+    <ul class="countries_datalist_ul datalist_ul">
     </ul>
 
   </div>
